src/objects/Approve_Attachment__c.object
<CustomObject>
    <fields>
        <fullName>Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approve_Attachment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approved_Date_Time__c</fullName>
        <label>Approved Date&amp;Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AttachmentPopup__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp;  Attachment_Id__c ,  Attachment_Name__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attachment_Id__c</fullName>
        <label>Attachment Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attachment_Name__c</fullName>
        <label>Attachment Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_ID__c</fullName>
        <label>Case ID</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Approve_Attachment</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ContentDocumentLinkId__c</fullName>
        <label>Content Document Link Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Approved Attachments</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A - {0000}</displayFormat>
        <label>ApproveAttachmentID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approved Attachments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>